--- a/scss/modules/_portal.scss
+++ b/scss/modules/_portal.scss
@@ -52,6 +52,7 @@
             vertical-align:middle;
         }
         form {
+            @include grid-12col();
             margin-top:.3em;
 
             label {
